--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://developerfolio.js.org/",
-  "name": "developerfolio",
+  "homepage": "https://bilxao.github.io",
+  "name": "bilxao",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,16 +20,16 @@
     "react-twitter-embed": "3.0.3",
     "sass": "^1.32.8"
   },
-  "scripts": {
-    "predeploy": "npm run build",
-    "start": "node fetch.js && react-scripts start",
-    "build": "node fetch.js && react-scripts build",
-    "deploy": "gh-pages -b master -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
-    "check-format": "prettier -c \"./**/*.{js,css,json,scss}\""
-  },
+"scripts": {
+  "predeploy": "npm run build",
+  "start": "node fetch.js && react-scripts start",
+  "build": "node fetch.js && react-scripts build",
+  "deploy": "gh-pages -d build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
+  "check-format": "prettier -c \"./**/*.{js,css,json,scss}\""
+},
   "eslintConfig": {
     "extends": "react-app"
   },
