Updated Certification Links

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bilxao.github.io",
+  "homepage": "https://bilxao.github.io/portfolio",
   "name": "bilxao",
   "version": "0.1.0",
   "private": true,
